# SharedPtr

./: README.md  SharedInt.hpp
SharedPtr/: shared_ptr.hpp
UnitTests/: CMakeLists.txt  unit_tests.cpp
